--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ input {
     border-radius: 8px;
     font-size: 16px;
     outline: none;
-    background-color: #333333;
+    background-color: #2b2b2b;
     color: #000;
 }
 
