--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .message {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 12px 18px;
     border-radius: 12px;
     font-size: 16px;
@@ -39,6 +39,8 @@ body {
     word-wrap: break-word;
     max-width: 80%;
     animation: fadeIn 0.3s ease-in-out;
+    background-color: #a7f203;
+    align-self: flex-end;
 }
 
 .user-message {
