--- a/style.css
+++ b/style.css
@@ -121,12 +121,48 @@ button:hover {
 }
 
 /* Estilo adicional para o corpo */
-body {
-    background-color: #000; /* Cor de fundo preta */
-    background-image: radial-gradient(circle at top, rgba(128, 255, 0, 0.507) 0%, rgba(0, 0, 0, 1) 50%); /* Gradiente radial */
-    height: 100vh; /* Altura total da janela */
-    display: flex; /* Usa flexbox */
-    padding-top: 0px; /* Remove o padding superior */
-    margin-top: 10px; /* Adiciona margem superior */
-    overflow: hidden; /* Remove a rolagem */
+.dots {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 4px;
+    height: 24px;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.2;
+    animation: jump 0.6s linear infinite;
+}
+
+.dot:nth-child(1) {
+    animation-delay: 0s;
+}
+.dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes jump {
+    0% {
+        opacity: 0.2;
+        transform: translateY(0);
+    }
+    33% {
+        opacity: 0.6;
+        transform: translateY(-8px);
+    }
+    66% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 0.2;
+        transform: translateY(0);
+    }
 }
